--- a/app/src/main/res/drawable/alert_dialog_bg.xml
+++ b/app/src/main/res/drawable/alert_dialog_bg.xml
@@ -3,10 +3,13 @@
     <solid
         android:color="#fff"/>
     <corners
-        android:radius="30dp" />
+        android:radius="15dp" />
     <padding
         android:left="10dp"
         android:top="10dp"
         android:right="10dp"
         android:bottom="10dp" />
+    <stroke
+        android:width="3dp"
+        android:color="@color/colorPrimary"/>
 </shape>
