--- a/app/src/main/res/layout/model_team_expense.xml
+++ b/app/src/main/res/layout/model_team_expense.xml
@@ -1,59 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:background="@drawable/alert_dialog_bg">
 
-
-    <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginTop="16dp"
+        android:orientation="vertical">
+
 
         <TextView
+            android:id="@+id/teamExpense_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name"
-            android:layout_weight="1"
-            android:gravity="center"
-            />
+            android:layout_marginBottom="20dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="Team Expense"
+            android:textColor="@color/font_title"
+            android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Expense"
-            android:layout_weight="1"
-            android:gravity="center"
-            />
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/font_title"
+                android:gravity="center"
+                android:text="Name" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textColor="@color/font_title"
+                android:text="Expense" />
+
+        </LinearLayout>
 
 
-    <ListView
-        android:id="@+id/team_expense_listview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp">
+        <ListView
+            android:id="@+id/team_expense_listview"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/background"
+            android:padding="4dp">
 
-    </ListView>
+        </ListView>
 
 
         <Button
             android:id="@+id/team_expense_dismiss"
             android:layout_width="100dp"
             android:layout_height="40dp"
-            android:text="OK"
             android:layout_gravity="end"
-            android:layout_margin="16dp"/>
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/btn_my_expense"
+            android:text="OK" />
 
     </LinearLayout>
-
-
 
 
 </ScrollView>
