--- a/app/src/main/res/layout/my_expense_dialog.xml
+++ b/app/src/main/res/layout/my_expense_dialog.xml
@@ -9,9 +9,21 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_margin="4dp">
+
+        <TextView
+            android:id="@+id/myExpense_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="My Expense"
+            android:textColor="@color/font_title"
+            android:textSize="16sp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="20dp"
+            />
 
 
         <ImageView
@@ -28,7 +40,9 @@
         <ListView
             android:id="@+id/my_expense_listView"
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:background="@color/background"
+            android:layout_height="200dp"
+            android:padding="4dp"
             >
 
         </ListView>
@@ -40,6 +54,7 @@
             android:layout_gravity="end"
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp"
 
             >
 
@@ -47,14 +62,14 @@
                 android:id="@+id/totalTEXT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
+                android:text="Total: "
                 />
 
             <TextView
                 android:id="@+id/totalAMOUNT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
+                android:text="5424"
 
                 />
 
@@ -66,13 +81,14 @@
             android:id="@+id/my_expense_save"
             android:layout_width="100dp"
             android:layout_height="40dp"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="end"
             android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/btn_my_expense"
             android:text="Save"/>
 
     </LinearLayout>
-
-
 
 
 </LinearLayout>
