--- a/app/src/main/res/layout/my_expense_model.xml
+++ b/app/src/main/res/layout/my_expense_model.xml
@@ -7,32 +7,35 @@
 
     <EditText
         android:id="@+id/usedON"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:hint="Used on"
         android:ems="5"
+        android:layout_weight="1"
         android:gravity="center"
-        android:textSize="16sp"/>
+        android:textSize="14sp"/>
 
 
 
     <EditText
         android:id="@+id/cost"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Cost"
         android:ems="5"
+        android:layout_weight="1"
         android:inputType="number|numberDecimal"
-        android:layout_marginStart="16dp"
-        android:textSize="16sp"
+        android:layout_marginStart="32dp"
+        android:textSize="14sp"
         android:gravity="center"
         />
 
     <ImageView
         android:id="@+id/remove_item_expense"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+
         android:src="@drawable/ic_dismiss_trip"
         />
 
