--- a/app/src/main/res/layout/team_expense_model.xml
+++ b/app/src/main/res/layout/team_expense_model.xml
@@ -11,8 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:layout_weight="1"
+        android:textColor="@color/font_normal"
+        android:layout_marginStart="32dp"
         android:layout_gravity="center"
         />
 
@@ -21,18 +23,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Expense"
-        android:textSize="16dp"
+        android:textSize="16sp"
+        android:gravity="center"
+        android:textColor="@color/font_normal"
+        android:layout_marginStart="32dp"
         android:layout_weight="1"
         android:layout_gravity="center"
         />
 
-    <ImageView
-        android:id="@+id/expense_call_member"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_call_member"
-        android:scaleType="center"
-        android:padding="16dp"
-        />
+
 
 </LinearLayout>
