--- a/app/src/main/res/layout/model_team_expense.xml
+++ b/app/src/main/res/layout/model_team_expense.xml
@@ -29,6 +29,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/team_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -37,6 +38,7 @@
                 android:text="Name" />
 
             <TextView
+                android:id="@+id/team_expense"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
